istio/services/inventory/inventory-pa.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: inventory-mtls
  namespace: k8s
spec:
  selector:
    matchLabels:
      app: inventory-service
  mtls:
    mode: STRICT
