istio/services/inventory/inventory-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inventory-virtualservice
  namespace: k8s
spec:
  hosts:
  - "*"
  gateways:
    - k8s/k8s-gateway
  http:
    - match:
      - uri:
          prefix: /inventory
      rewrite:
        uri: /
      timeout: 10s
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: gateway-error,connect-failure,refused-stream,5xx
      route:
        - destination:
            host: inventory-service
            port:
              number: 80
